# dispenser

./: .gitignore  README.md  setup.cfg
src/dispenser/: __init__.py  create.py  update.py  util.py  version_base.py
src/dispenser/impl/: __init__.py  forge.py  paper.py  vanilla.py
