[metadata]
name = dispenser
version = 0.3.0
author = xImAnton_
author_email = admin@ximanton.de
description = Create Minecraft Servers of various types
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xImAnton/dispenser
project_urls =
    Bug Tracker = https://github.com/xImAnton/dispenser/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
